Fix delete method.
